# pypipedrive

./: .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  codecov.yml  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ci_pipeline.yml
.github/workflows/: branch_name.yml  ci_pipeline.yml
docs/: Makefile
docs/source/: _warn_latest.rst  about.rst  api-reference.rst  api.rst  changelog.rst  conf.py  contributing.rst  getting-started.rst  index.rst  links.rst  migration.rst  migrations.rst  models.rst  ref-api.rst  ref-entities.rst  ref-exception.rst  ref-orm-fields.rst  ref-orm-models.rst  ref-orm-types.rst  ref-utilities.rst
docs/source/_static/: custom.css  gtag.js
pypipedrive/: __init__.py  exceptions.py  utils.py
pypipedrive.egg-info/: PKG-INFO  SOURCES.txt
pypipedrive/api/: __init__.py  api.py  exceptions.py
pypipedrive/models/: __init__.py  activities.py  activity_fields.py  activity_types.py  billing.py  call_logs.py  channels.py  currencies.py  deal_fields.py  deals.py  files.py  filters.py  goals.py  item_search.py  lead_fields.py  lead_labels.py  lead_sources.py  leads.py  mail_threads.py  organization_fields.py  organization_relationships.py  organizations.py  person_fields.py  persons.py  pipelines.py  product_fields.py  products.py  stages.py  subscriptions.py
pypipedrive/orm/: fields.py  model.py  types.py
tests/: conftest.py  test_api_api.py  test_files.py  test_orm_fields.py  test_orm_types.py
