[bdist_wheel]
universal=1

[metadata]
name = pypipedrive
version = attr: pypipedrive.__version__

description = Python SDK for the Pipedrive CRM V1/V2 API
long_description = file: README.md
long_description_content_type = text/markdown
author = Juan Manuel M. Pérez (Magical Potion)
url = https://github.com/jmanprz/pypipedrive
authoremail = jm@magicalpotion.io
license = MIT
copyright = Copyright 2025 Juan Manuel M. Pérez (Magical Potion)
keywords = pipedrive, api, client, pypipedrive
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

# Keep requests version in sync with tox.ini
[options]
packages = find:
install_requires =
    inflection
    pydantic >= 2
    requests >= 2.22.0
    typing_extensions
    urllib3 >= 1.26

[aliases]
test=pytest