[metadata]
name = pypipedrive-client
version = attr: pypipedrive.__version__

description = Python SDK for the Pipedrive CRM V1/V2 API
long_description = file: README.md
long_description_content_type = text/markdown
author = Juan Manuel M. Pérez (Magical Potion)
url = https://github.com/jmanprz/pypipedrive
project_urls =
    Homepage = https://github.com/jmanprz/pypipedrive
    Documentation = https://pypipedrive.readthedocs.io
    Source = https://github.com/jmanprz/pypipedrive
    Issues = https://github.com/jmanprz/pypipedrive/issues
author_email = jm@magicalpotion.io
license = MIT
copyright = Copyright 2025 Juan Manuel M. Pérez (Magical Potion)
keywords = pipedrive, api, client, pypipedrive
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

# Keep requests version in sync with tox.ini
[options]
packages = find:
install_requires =
    inflection
    pydantic >= 2
    requests >= 2.22.0
    typing_extensions
    urllib3 >= 1.26

[aliases]
test=pytest